<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inventory"
        android:title=""
        android:icon="@drawable/list"/>
    <item
        android:id="@+id/expenses"
        android:title=""
        android:icon="@drawable/expenses"/>
    <item
        android:id="@+id/scan"
        android:title=""
        android:icon="@drawable/camera"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="">

    </item>
    <item
        android:id="@+id/settings"
        android:title=""
        android:icon="@drawable/settings"
        />
</menu>















